--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <title>Tim Berners-Lee</title>
     <link href="style.css" rel="stylesheet">
   </head>
+<body>
 <header>
-    <img src="tim_berners_lee.jpg" img alt="Tim Berners-Lee">
+    <img src="tim_berners_lee.jpg" 
+    img alt="Tim Berners-Lee"
+    />
     <h1>Tim Berners-Lee</h1>
     <h2>Inventor of HTML</h2>
     <p>Tim Berners-Lee is the Inventor of the Web. In 1989, Tim was working in a computing services section of CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an enormous scale.</p>
@@ -45,14 +48,22 @@
 
 <h2>His favorite movies</h2>
 
-<img src="space_odyssey.jpg" img alt="Space Odyssey">
+<img src="space_odyssey.jpg" 
+img alt="Space Odyssey"
+/>
 <h3>2001 - Space Odyssey</h3>
 <p>Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the itelligent computer H.A.L. 9000, sets off on a quest.</p>
 
-<img src="mister_hulot.jpg" img alt="Monsieur Hulot">
+<img src="mister_hulot.jpg" 
+img alt="Monsieur Hulot"
+/>
 <h3>Monsieur Hulot</h3>
 <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
 
-<img src="alien.jpg" img alt="Alien">
+<img src="alien.jpg" 
+img alt="Alien"
+/>
 <h3>Alien</h3>
 <p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
+</body>
+</html>
