--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
 <header>
-    <img src="tim_berners_lee.jpg" 
+    <img src="images_folders/tim_berners_lee.jpg" 
     img alt="Tim Berners-Lee"
     />
     <h1>Tim Berners-Lee</h1>
@@ -21,6 +21,7 @@
 
 <ul>
     <li>
+        <i class="fab fa-facebook-f"></i>
         <a
         href="https://www.facebook.com/Sir-Tim-Berners-Lee-174851762937116/" 
         title="go to facebook" 
@@ -29,6 +30,7 @@
     </li> 
 
     <li>
+        <i class="fab fa-linkedin-in"></i>
         <a
         href="https://www.linkedin.com/in/tim-berners-lee-b41808ab/" 
         title="go to linkedin" 
@@ -37,6 +39,7 @@
         </li> 
 
     <li>
+        <i class="fab fa-twitter"></i>
         <a
         href="https://twitter.com/timberners_lee?lang=fr" 
         title="go to Twitter" 
@@ -48,19 +51,19 @@
 
 <h2>His favorite movies</h2>
 
-<img src="space_odyssey.jpg" 
+<img src="images_folders/space_odyssey.jpg" 
 img alt="Space Odyssey"
 />
 <h3>2001 - Space Odyssey</h3>
 <p>Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the itelligent computer H.A.L. 9000, sets off on a quest.</p>
 
-<img src="mister_hulot.jpg" 
+<img src="images_folders/mister_hulot.jpg" 
 img alt="Monsieur Hulot"
 />
 <h3>Monsieur Hulot</h3>
 <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
 
-<img src="alien.jpg" 
+<img src="images_folders/alien.jpg" 
 img alt="Alien"
 />
 <h3>Alien</h3>
