--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <title>Tim Berners-Lee</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.0.0/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-  </head>
-<body>
+    <script src="https://kit.fontawesome.com/de23581e87.js" crossorigin="anonymous"></script>
 <header>
     <img src="images_folders/tim_berners_lee.jpg" 
     img alt="Tim Berners-Lee"
     />
     <h1>Tim Berners-Lee</h1>
     <h2>Inventor of HTML</h2>
-    <p>Tim Berners-Lee is the Inventor of the Web. In 1989, Tim was working in a computing services section of CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an enormous scale.</p>
+    <p>Tim Berners-Lee is the <span class="bold">Inventor</span> of the Web. In 1989, Tim was working in a computing services section of CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an <span class="bold">enormous scale.</span></p>
     <a 
     href="https://en.wikipedia.org/wiki/Tim_Berners-Lee" 
     title="find out more" 
@@ -50,7 +48,7 @@
 
 </ul>
 
-<h2>His favorite movies</h2>
+<h2><span class="surligne">His</span> favorite movies</h2>
 
 <img src="images_folders/space_odyssey.jpg" 
 img alt="Space Odyssey"
