--- a/index.html
+++ b/index.html
@@ -47,25 +47,38 @@
         </li> 
 
 </ul>
-
+<section>
 <h2><span class="surligne">His</span> favorite movies</h2>
 
-<img src="images_folders/space_odyssey.jpg" 
+<article>
+<div><img src="images_folders/space_odyssey.jpg" 
 img alt="Space Odyssey"
-/>
-<h3>2001 - Space Odyssey</h3>
-<p>Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the itelligent computer H.A.L. 9000, sets off on a quest.</p>
+/></div>
 
-<img src="images_folders/mister_hulot.jpg" 
+<div class="info"><h3>2001 - Space Odyssey</h3>
+<p>Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the itelligent computer H.A.L. 9000, sets off on a quest.</p>
+</div>
+</article>
+
+<article>
+<div><img src="images_folders/mister_hulot.jpg" 
 img alt="Monsieur Hulot"
-/>
+/></div>
+<div class="info">
 <h3>Monsieur Hulot</h3>
 <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
+</div>
+</article>
 
-<img src="images_folders/alien.jpg" 
+<article>
+<div><img src="images_folders/alien.jpg" 
 img alt="Alien"
-/>
+/></div>
+<div class="info">
 <h3>Alien</h3>
 <p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
+</div>
+</article>
+</section>
 </body>
 </html>
